--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
         <tr>
           <td>
             <span class="icon">{{ file.icon }}</span
-            ><a href="{{ url_for('serve_files', path=path + '/' + file.name) }}"
+            ><a href="{{ url_for('files_route', path=path + '/' + file.name) }}"
               >{{ file.name }}</a
             >
           </td>
