--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,30 +3,37 @@
   <head>
     <title>{{ config.title }}</title>
     <link rel="icon" type="image/png" href="/assets/favicon.svg" />
+    <link rel="stylesheet" href="/assets/sortable.min.css" />
+    <script src="/assets/sortable.min.js"></script>
     <link rel="stylesheet" href="/themes/default.css" />
     <link rel="stylesheet" href="/themes/{{ config.theme }}.css" />
   </head>
   <body>
     <div class="container">
       <h1>Files in {{ path }}</h1>
-      <table>
-        <tr>
-          <th>Name</th>
-          <th>Size</th>
-          <th>Last Modified</th>
-        </tr>
-        {% for file in files %}
-        <tr>
-          <td>
-            <span class="icon">{{ file.icon }}</span
-            ><a href="{{ url_for('files_route', path=path + '/' + file.name) }}"
-              >{{ file.name }}</a
-            >
-          </td>
-          <td>{{ file.size }}</td>
-          <td>{{ file.modified.strftime('%Y-%m-%d %H:%M:%S') }}</td>
-        </tr>
-        {% endfor %}
+      <table class="sortable">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Size</th>
+            <th>Last Modified</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for file in files %}
+          <tr>
+            <td data-sort="{{ file.name }}">
+              <span class="icon">{{ file.icon }}</span
+              ><a
+                href="{{ url_for('files_route', path=path + '/' + file.name) }}"
+                >{{ file.name }}</a
+              >
+            </td>
+            <td data-sort="{{ file.size_value }}">{{ file.size }}</td>
+            <td>{{ file.modified.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
       </table>
     </div>
     <footer class="version">
