--- a/app/static/themes/default.css
+++ b/app/static/themes/default.css
@@ -100,6 +100,7 @@ a:hover {
 .sortable thead th {
   background: var(--background-color);
   color: var(--text-color);
+  font-weight: bold;
 }
 
 .sortable tbody tr:nth-child(odd) {
