--- a/app/static/themes/dark.css
+++ b/app/static/themes/dark.css
@@ -1,11 +1,9 @@
 :root {
   --font-family: "Inter", Arial, sans-serif;
-  --background-color: #262626;
-  --secondary-color: #373737;
+  --primary-color: #373737;
+  --secondary-color: #262626;
   --tertiary-color: #4c4c4c;
   --text-color: #ffffff;
-  --box-shadow: 0 0 0;
-  --border-radius: 10px;
 }
 
 a {
