--- a/app/static/themes/dracula.css
+++ b/app/static/themes/dracula.css
@@ -1,7 +1,7 @@
 :root {
   --font-family: "Inter", Arial, sans-serif;
-  --background-color: #282a36;
-  --secondary-color: #373844;
+  --secondary-color: #282a36;
+  --primary-color: #373844;
   --tertiary-color: #44475a;
   --text-color: #f8f8f2;
   --box-shadow: 0 0 0;
