--- a/app/static/themes/default.css
+++ b/app/static/themes/default.css
@@ -1,11 +1,12 @@
 :root {
   --font-family: "Inter var", Arial, sans-serif;
   --primary-color: #ffff;
-  --secondary-color: color-mix(in srgb, var(--primary-color), black 10%);
-  --tertiary-color: color-mix(in srgb, var(--primary-color), black 5%);
+  --shade: black;
+  --secondary-color: color-mix(in srgb, var(--primary-color), var(--shade) 10%);
+  --tertiary-color: color-mix(in srgb, var(--primary-color), var(--shade) 5%);
   --text-color: #0f0f0f;
   --border-radius: 10px;
-  --border: 1px solid color-mix(in srgb, var(--primary-color), black 15%);
+  --border: 1px solid color-mix(in srgb, var(--primary-color), var(--shade) 15%);
 }
 
 @font-face {
