--- a/app/static/assets/css/default.css
+++ b/app/static/assets/css/default.css
@@ -1,20 +1,28 @@
 :root {
   --font-family: "Inter var", Arial, sans-serif;
-  --primary-color: #ffff;
+  --emoji-font: "NotoEmoji", sans-serif;
+  --primary-color: #f3f3f3;
   --shade: black;
   --secondary-color: color-mix(in srgb, var(--primary-color), var(--shade) 10%);
   --tertiary-color: color-mix(in srgb, var(--primary-color), var(--shade) 5%);
-  --text-color: #0f0f0f;
+  --text-color: #373737;
+  --link-color: #316dca;
   --border-radius: 10px;
   --border: 1px solid color-mix(in srgb, var(--primary-color), var(--shade) 15%);
 }
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    --primary-color: #373737;
+    --shade: white;
+    --text-color: #f3f3f3;
+  }
+}
+
 @font-face {
   font-family: "NotoEmoji";
-  src: url("../assets/fonts/NotoColorEmoji/NotoColorEmoji.ttf")
-    format("truetype");
-  src: url("../assets/fonts/NotoColorEmoji/NotoColorEmoji.woff2")
-    format("woff2");
+  src: url("../fonts/NotoColorEmoji/NotoColorEmoji.ttf") format("truetype");
+  src: url("../fonts/NotoColorEmoji/NotoColorEmoji.woff2") format("woff2");
 }
 
 @font-face {
@@ -23,7 +31,7 @@
   font-display: swap;
   font-style: normal;
   font-named-instance: "Regular";
-  src: url("../assets/fonts/Inter/Inter-roman.var.woff2?v=3.19") format("woff2");
+  src: url("../fonts/Inter/Inter-roman.var.woff2?v=3.19") format("woff2");
 }
 @font-face {
   font-family: "Inter var";
@@ -31,8 +39,7 @@
   font-display: swap;
   font-style: italic;
   font-named-instance: "Italic";
-  src: url("../assets/fonts/Inter/Inter-italic.var.woff2?v=3.19")
-    format("woff2");
+  src: url("../fonts/Inter/Inter-italic.var.woff2?v=3.19") format("woff2");
 }
 
 body {
@@ -115,20 +122,20 @@ a {
 }
 
 a:hover {
-  color: #4fbcff;
+  color: var(--link-color);
   text-decoration: underline;
 }
 
 .icon {
   font-size: 20px;
   margin-right: 5px;
-  font-family: "NotoEmoji", sans-serif;
+  font-family: var(--emoji-font);
 }
 
 .header-icon {
   font-size: inherit;
   margin-right: 5px;
-  font-family: "NotoEmoji", sans-serif;
+  font-family: var(--emoji-font);
 }
 
 .version {
@@ -197,7 +204,7 @@ a:hover {
 #close-motd {
   background-color: var(--tertiary-color);
   border: var(--border);
-  font-family: "NotoEmoji", sans-serif;
+  font-family: var(--emoji-font);
   border-radius: 50%;
   padding: 5px 5px;
   cursor: pointer;
@@ -209,4 +216,24 @@ a:hover {
 #close-motd:hover {
   transform: scale(0.9);
   background-color: var(--secondary-color);
+}
+
+#upload-overlay {
+  background-color: color-mix(in srgb, var(--primary-color), transparent 25%);
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+#upload-icon {
+  text-align: center;
+  font-size: 2.5rem;
+  font-family: var(--emoji-font);
 }
