--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,29 +3,23 @@
   <head>
     <title>{{ config.title }}</title>
     <link rel="icon" type="image/png" href="/assets/favicon.svg" />
-    <link rel="stylesheet" href="/assets/style/sortable.min.css" />
-    <script src="/assets/script/sortable.min.js"></script>
-    <script src="/assets/script/drag-n-drop.js" defer></script>
-    <script src="/assets/script/motd.js" defer></script>
-    <link
-      rel="stylesheet"
-      href="/themes/default.css"
-      id="light-mode-stylesheet"
-    />
-    <link rel="stylesheet" href="/themes/dark.css" id="dark-mode-stylesheet" />
+    <link rel="stylesheet" href="/assets/css/default.css" />
+    <script src="/assets/js/motd.js" defer></script>
   </head>
-
-  <body id="drop-area">
+  <body>
     <div id="flask-data" style="display: none">
       <span id="flask-data-path">{{ path }}</span>
       <span id="flask-data-title">{{ config.title }}</span>
+    </div>
+    <div id="upload-overlay">
+      <span class="header-icon" id="upload-icon">🖱️➡️📂</span>
     </div>
     <div id="motd-banner" class="motd-banner-hidden">
       <span id="motd-title"></span>
       <span id="motd-message"></span>
       <button id="close-motd">❌</button>
     </div>
-    <div class="container">
+    <div class="container" id="drop-area">
       <h1><span class="header-icon">🌊</span>{{ config.title }}</h1>
       <h2>
         / {% set path_parts = path.split('/') %} {% for i in
@@ -68,30 +62,7 @@
       <span class="icon">🚀</span>Version: {{ version }}
     </footer>
   </body>
-  <script>
-    function darkModeEnabled() {
-      return window.matchMedia("(prefers-color-scheme: dark)").matches;
-    }
-
-    function toggleStylesheets() {
-      const lightModeStylesheet = document.getElementById(
-        "light-mode-stylesheet"
-      );
-      const darkModeStylesheet = document.getElementById(
-        "dark-mode-stylesheet"
-      );
-
-      if (darkModeEnabled()) {
-        darkModeStylesheet.disabled = false;
-      } else {
-        darkModeStylesheet.disabled = true;
-      }
-    }
-
-    window.addEventListener("load", toggleStylesheets);
-
-    window
-      .matchMedia("(prefers-color-scheme: dark)")
-      .addListener(toggleStylesheets);
-  </script>
+  <link rel="stylesheet" href="/assets/css/sortable-base.css" />
+  <script src="/assets/js/sortable.min.js" defer></script>
+  <script src="/assets/js/drag-n-drop.js" defer></script>
 </html>
