implement minify JS and CSS functionality

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>{{ config.title }}</title>
     <link rel="icon" type="image/png" href="/assets/favicon.svg" />
-    <link rel="stylesheet" href="/assets/css/default.css" />
-    <script src="/assets/js/motd.js" defer></script>
+    <link rel="stylesheet" href="/assets/css/default.min.css" />
+    <script src="/assets/js/motd.min.js" defer></script>
   </head>
   <body>
     <div id="flask-data" style="display: none">
@@ -62,7 +62,7 @@
       <span class="icon">🚀</span>Version: {{ version }}
     </footer>
   </body>
-  <link rel="stylesheet" href="/assets/css/sortable-base.css" />
+  <link rel="stylesheet" href="/assets/css/sortable-base.min.css" />
   <script src="/assets/js/sortable.min.js" defer></script>
-  <script src="/assets/js/drag-n-drop.js" defer></script>
+  <script src="/assets/js/drag-n-drop.min.js" defer></script>
 </html>
