--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/assets/css/default.min.css" />
     <script src="/assets/js/motd.min.js" defer></script>
   </head>
-  <body>
+  <body id="body">
     <div id="flask-data" style="display: none">
       <span id="flask-data-path">{{ path }}</span>
       <span id="flask-data-title">{{ config.title }}</span>
@@ -45,11 +45,19 @@
           {% for file in files %}
           <tr>
             <td data-sort="{{ file.name }}">
-              <span class="icon">{{ file.icon }}</span
-              ><a
+              <span class="icon">{{ file.icon }}</span>{% if is_folder %}
+              <a
                 href="{{ url_for('files_route', path=path + '/' + file.name) }}"
+                target="_self"
                 >{{ file.name }}</a
               >
+              {% else %}
+              <a
+                href="{{ url_for('files_route', path=path + '/' + file.name) }}"
+                target="_blank"
+                >{{ file.name }}</a
+              >
+              {% endif %}
             </td>
             <td data-sort="{{ file.size }}">{{ file.size_str }}</td>
             <td>{{ file.modified.strftime('%Y-%m-%d %H:%M:%S') }}</td>
