improve upload overlay

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,6 +13,7 @@
     </div>
     <div id="upload-overlay">
       <span class="header-icon" id="upload-icon">🖱️➡️📂</span>
+      <h2>Drop to upload your files</h2>
     </div>
     <div id="motd-banner" class="motd-banner-hidden">
       <span id="motd-title"></span>
