--- a/app/static/assets/css/default.css
+++ b/app/static/assets/css/default.css
@@ -219,21 +219,25 @@ a:hover {
 }
 
 #upload-overlay {
-  background-color: color-mix(in srgb, var(--primary-color), transparent 25%);
+  background-color: var(--primary-color);
+  border: var(--border);
+  border-radius: var(--border-radius);
   pointer-events: none;
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  width: fit-content;
+  height: fit-content;
   z-index: 999;
   display: none;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  padding: 4rem;
 }
 
 #upload-icon {
   text-align: center;
+  margin-top: 20px;
   font-size: 2.5rem;
   font-family: var(--emoji-font);
 }
