supported files open in editor

--- a/app/templates/editor.html
+++ b/app/templates/editor.html
@@ -39,11 +39,7 @@
             <circle cx="256" cy="352" r="48" />
           </svg>
         </button>
-        <button
-          title="Close"
-          id="close-motd"
-          onclick="window.location.href='/';"
-        >
+        <button title="Close" onclick="window.history.back();">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             class="ionicon"
